--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-  
+  <h1> Welcome to Flash, your fast server! </h1> 
   </body>
 </html>
